solved overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 .App {
   text-align: center;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 body{
